plugins {
    id('java-library')
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnlyApi('org.jetbrains:annotations:25.0.0')

    // IDEA said 2.8.0 has vulnerabilities
    compileOnlyApi('com.google.code.gson:gson:2.8.9')
    compileOnlyApi("org.apache.logging.log4j:log4j-api:2.15.0")
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}